terraform_code/vpc/V5-eks_setup.tf
provider "aws" {
  region = "us-east-1"
  
}

resource "aws_instance" "demo-server" {
  ami = "ami-0c7217cdde317cfec"
  instance_type = "t2.micro"
  key_name = "ddp"
  //security_groups = ["demo-sg"]
  vpc_security_group_ids = [aws_security_group.demo-sg.id]
  subnet_id = aws_subnet.ddp-public-subnet-01.id
  for_each = toset(["jenkins-master","build-slave","ansible"])
  tags = {
    Name = "${each.key}"
  }  
}
resource "aws_security_group" "demo-sg" {
  name        = "demo-sg"
  description = "Allow SSH"
  vpc_id = aws_vpc.ddp-vpc.id

  ingress {
    description      = "SSH Access"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "Jenkins port"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "ssh-port"
  }
}
resource "aws_vpc" "ddp-vpc" {
  cidr_block = "10.1.0.0/16"
  tags = {
    Name = "ddp-vpc"
  }
  
}
resource "aws_subnet" "ddp-public-subnet-01" {
  vpc_id = aws_vpc.ddp-vpc.id
  cidr_block = "10.1.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone = "us-east-1a"
  tags = {
    Name = "ddp-public-subnet-01"
  }
}
resource "aws_subnet" "ddp-public-subnet-02" {
  vpc_id = aws_vpc.ddp-vpc.id
  cidr_block = "10.1.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone = "us-east-1b"
  tags = {
    Name = "ddp-public-subnet-02"
  }
  
}
resource "aws_internet_gateway" "ddp-igw" {
  vpc_id = aws_vpc.ddp-vpc.id
  tags = {
    Name = "ddp-igw"
  }
  
}
resource "aws_route_table" "ddp-public-rt" {
  vpc_id = aws_vpc.ddp-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ddp-igw.id
  }
  
}
resource "aws_route_table_association" "ddp-rta-public-subnet-01" {
  subnet_id = aws_subnet.ddp-public-subnet-01.id
  route_table_id = aws_route_table.ddp-public-rt.id    
}
resource "aws_route_table_association" "ddp-rta-public-subnet-02" {
  subnet_id = aws_subnet.ddp-public-subnet-02.id
  route_table_id = aws_route_table.ddp-public-rt.id 
}
  module "sgs" {
    source = "../sg_eks"
    vpc_id = aws_vpc.ddp-vpc.id
 }

  module "eks" {
       source = "../eks"
       vpc_id = aws_vpc.ddp-vpc.id
       subnet_ids = [aws_subnet.ddp-public-subnet-01.id,aws_subnet.ddp-public-subnet-02.id]
       sg_ids = module.sgs.security_group_public
 }
